# Arduino-Weather-Station

./: .gitignore  README.md  requirements.txt
api/: Cargo.toml  main.py
api/src/: main.rs
arduino_firmware/: platformio.ini
arduino_firmware/src/: main.cpp
db/: init_db.sql
firmware/arduino_firmware/src/: main.cpp
firmware/nodemcu_firmware/: platformio.ini
firmware/nodemcu_firmware/src/: main.cpp
nodemcu_firmware/: #.gitignore#
web_interface/: index.html  style.css
web_interface/css/: style.css
web_interface/js/: script.js
web_interface/static/: index.html
