[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.10"
log = "0.4.20"
serde = { version = "1.0.193", features = ["derive"] }
simplelog = "0.12.1"
serde_json = "1.0.64"
features = "0.10.0"
derive = "1.0.0"
chrono = { version = "0.4.31", features = ["serde"] }
uuid = { version = "1.6.1", features = ["v4"] }
actix-files = "0.6.2"
